2008-10-26  Chuck Miller  <shadowmil@gmail.com>

	* src/effectmanager.h,src/effectmanager.cpp,src/game.cpp: Added a
	effects manager that reads from effects.xml when created, and can
	tigger the effects when ever needed.  Like 0.0 does.

2008-10-26  Chuck Miller  <shadowmil@gmail.com>

	* src/net/beinghandler.cpp,src/localplayer.cpp,src/being.h: Played
	around more with movement.  I think later on all of movement will
	need to be revised.  But this should work for now.

2008-10-25  Roderic Morris  <roderic@ccs.neu.edu>

	* src/commandhandler.cpp: get rid of /admin commands (they're now
	@ commands).

2008-10-25  Chuck Miller  <shadowmil@gmail.com>

	* src/localplayer.h,src/localplayer.cpp,src/game.cpp: Played around
	with movement, its still not where it should be, but its quite a bit
	better.

2008-10-24  Chuck Miller  <shadowmil@gmail.com>

	* src/resources/iteminfo.h,src/resources/itemdb.cpp: Added attack
	range to item's info
	* src/localplayer.h,src/localplayer.cpp: Changed the getAttackRange
	method to use item's info, this is so targets will turn blue when you
	are close enough, as a result mAttackRange and setAttackRange were
	removed
	* src/beingmanager.cpp: Fixed not selecting closest being, and cleaned
	up some so the selecting code is only in one place

2008-10-24  Chuck Miller  <shadowmil@gmail.com>

	* src/localplayer.cpp: Made it so the player will auto face its target
	* src/net/beinghandler.cpp: Fixed it so the correct direction will be
	set

2008-10-23  Chuck Miller  <shadowmil@gmail.com>

	* src/beingmanager.cpp: Fixed a bug causing targets not to work, and
	added code that sets player_node's target to null if it gets deleted
	* src/gui/viewport.cpp: Changed some values to make targets show
	correctly

2008-10-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/Makefile.am: Fixed building with configure.

2008-10-21  Roderic Morris  <roderic@ccs.neu.edu>

	* src/CMakeLists.txt: Fixed building for cmake.

2008-10-21  David Athay  <ko2fan@gmail.com>
