@@ -131,6 +131,7 @@ enum {
     PGMSG_USE_ITEM                 = 0x0300, // B slot
     GPMSG_USE_RESPONSE             = 0x0301, // B error
     GPMSG_BEINGS_DAMAGE            = 0x0310, // { W being id, W amount }*
+    GPMSG_CREATE_EFFECT            = 0x0320, // W effect id, W*2 position
 
     // Guild
     PCMSG_GUILD_CREATE                  = 0x0350, // S name
